force-app/main/default/objects/Timefold_Run__c/Timefold_Run__c.object-meta.xml
<!-- One row per optimisation run.

     Nothing keeps memory between transactions, so a run is a record: it
     survives, it is visible in a list view, and a queueable that wakes up two
     minutes later can find out what it was doing. -->
<CustomObject>
    <label>Timefold Run</label>
    <pluralLabel>Timefold Runs</pluralLabel>
    <nameField>
        <label>Run Number</label>
        <type>AutoNumber</type>
        <displayFormat>TFR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>An optimisation run: what was sent to Timefold, what came back, and what was written to Salesforce.</description>
</CustomObject>