force-app/main/default/objects/Timefold_Run__c/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <label>Finished</label>
    <type>DateTime</type>

</CustomField>