force-app/main/default/objects/Timefold_Run__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Roster</fullName><default>true</default><label>Roster (Employee Shift Scheduling)</label></value>
            <value><fullName>Routes</fullName><default>false</default><label>Routes (Field Service Routing)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>