force-app/main/default/objects/Timefold_Run__c/fields/Poll_Count__c.field-meta.xml
<CustomField>
    <fullName>Poll_Count__c</fullName>
    <label>Poll Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>How many times the queueable came back to look.</description>
</CustomField>