force-app/main/default/objects/Timefold_Run__c/fields/Records_Planned__c.field-meta.xml
<CustomField>
    <fullName>Records_Planned__c</fullName>
    <label>Records Planned</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Shifts or visits sent to Timefold.</description>
</CustomField>