force-app/main/default/objects/Timefold_Run__c/fields/Records_Written__c.field-meta.xml
<CustomField>
    <fullName>Records_Written__c</fullName>
    <label>Records Written</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Salesforce records actually updated.</description>
</CustomField>