force-app/main/default/objects/Timefold_Run__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Text</type>
    <length>120</length>
    <description>Hard/medium/soft. Anything other than 0hard/0medium means a rule was broken.</description>
</CustomField>