force-app/main/default/objects/Timefold_Run__c/fields/Solver_Status__c.field-meta.xml
<CustomField>
    <fullName>Solver_Status__c</fullName>
    <label>Solver Status</label>
    <type>Text</type>
    <length>60</length>
</CustomField>