force-app/main/default/objects/Timefold_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Building</fullName><default>true</default><label>Building the request</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted to Timefold</label></value>
            <value><fullName>Solving</fullName><default>false</default><label>Solving</label></value>
            <value><fullName>Writing</fullName><default>false</default><label>Writing back to Salesforce</label></value>
            <value><fullName>Done</fullName><default>false</default><label>Done</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>