force-app/main/default/objects/Timefold_Run__c/fields/Timefold_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Timefold_Job_Id__c</fullName>
    <label>Timefold Job Id</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
    <description>The id Timefold gave this run. Use it to find the run in the Timefold console.</description>
</CustomField>