force-app/main/default/objects/Timefold_Run__c/fields/Travel_Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Travel_Distance_Km__c</fullName>
    <label>Travel Distance (km)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>1</scale>
    <description>Routing runs only. Total driving distance of the whole plan, from the run's KPIs.</description>
</CustomField>