force-app/main/default/objects/Timefold_Run__c/fields/Travel_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Hours__c</fullName>
    <label>Travel Time (h)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Routing runs only. Total driving time of the whole plan, from the run's KPIs. Real road time: the model uses the Timefold Platform maps service, which defaults to OSRM.</description>
</CustomField>