force-app/main/default/objects/Timefold_Run__c/fields/Unassigned__c.field-meta.xml
<CustomField>
    <fullName>Unassigned__c</fullName>
    <label>Unassigned</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Shifts or visits the solver could not fill. Usually the data, not the solver.</description>
</CustomField>