force-app/main/default/objects/Timefold_Run__c/fields/Validation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Validation_Detail__c</fullName>
    <label>Validation Detail</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>