force-app/main/default/objects/Timefold_Run__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <label>Validation Status</label>
    <type>Text</type>
    <length>40</length>
    <description>Timefold checks the input on every run and warns even when the solve succeeds.</description>
</CustomField>