force-app/main/default/objects/Timefold_Run__c/fields/Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Window_Start__c</fullName>
    <label>Window Start</label>
    <type>DateTime</type>

</CustomField>