force-app/main/default/objects/Timefold_Run__c/listViews/All_Runs.listView-meta.xml
<ListView>
    <fullName>All_Runs</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Status__c</columns>
    <columns>Score__c</columns>
    <columns>Records_Planned__c</columns>
    <columns>Records_Written__c</columns>
    <columns>Unassigned__c</columns>
    <columns>Validation_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Runs</label>
</ListView>