force-app/main/default/objects/Timefold_Run__c/listViews/Needs_Attention.listView-meta.xml
<ListView>
    <fullName>Needs_Attention</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Status__c</columns>
    <columns>Solver_Status__c</columns>
    <columns>Validation_Status__c</columns>
    <columns>Error__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done</value>
    </filters>
    <label>Needs Attention</label>
</ListView>