force-app/main/default/objects/Timefold_Run__c/listViews/Routing_Runs.listView-meta.xml
<ListView>
    <fullName>Routing_Runs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Score__c</columns>
    <columns>Records_Planned__c</columns>
    <columns>Records_Written__c</columns>
    <columns>Unassigned__c</columns>
    <columns>Travel_Time_Hours__c</columns>
    <columns>Travel_Distance_Km__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Model__c</field>
        <operation>equals</operation>
        <value>Routes</value>
    </filters>
    <label>Routing Runs</label>
</ListView>